[tool.poetry]
name = "knowhow"
version = "0.1.0"
description = "An opionated approach to building alpha from your internal knowledge"
authors = ["f0rodo <kthakorefi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
create = true
in-project = true